# xcavate-on-kilt-dip-consumer

./: .gitignore  Cargo.toml  README.md  collators.txt  keys.txt  para-4003-genesis-state.txt  para-4003-wasm.txt  para-4105-genesis-state.txt  plain-parachain-chainspec.json  raw-parachain-chainspec.json  rust-toolchain.toml
dip-template/nodes/dip-consumer/: Cargo.toml
dip-template/nodes/dip-consumer/src/: chain_spec.rs  cli.rs  command.rs  rpc.rs
dip-template/pallets/community-loan-pool/: Cargo.toml
dip-template/pallets/community-loan-pool/src/: lib.rs
dip-template/pallets/community-projects/: Cargo.toml
dip-template/pallets/dummy/: Cargo.toml
dip-template/pallets/dummy/src/: lib.rs
dip-template/pallets/nft-marketplace/: Cargo.toml
dip-template/pallets/nft-marketplace/src/: lib.rs
dip-template/pallets/pallet-postit/: Cargo.toml
dip-template/pallets/property-governance/: Cargo.toml
dip-template/pallets/property-management/: Cargo.toml
dip-template/pallets/xcavate-staking/: Cargo.toml
dip-template/pallets/xcavate-staking/src/: lib.rs
dip-template/pallets/xcavate-whitelist/: Cargo.toml
dip-template/pallets/xcavate-whitelist/src/: lib.rs
dip-template/runtimes/dip-consumer/: Cargo.toml
dip-template/runtimes/dip-consumer/src/: dip.rs  lib.rs
