[package]
name = "pallet-community-loan-pool"
version = { workspace = true }
description = "The Xcavate pallet community-loan-pool"
authors = ["Xcavate Network"]
homepage = "https://xcavate.io"
edition = "2021"
license = "Apache-2.0"
publish = false
repository = "https://github.com/XcavateBlockchain/MarketplaceMVP_Substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true, features = ["derive"] }
scale-info         = { workspace = true, features = ["derive"] }

frame-support 		= { workspace = true }
frame-system		= { workspace = true }
sp-runtime  = { workspace = true }
sp-std 				= { workspace = true }

serde			= { workspace = true,default-features = false, optional = true }	
frame-benchmarking = { workspace = true, default-features = false, optional = true }	

pallet-nfts 		= { workspace = true, default-features = false }
pallet-balances 	= { workspace = true, default-features = false }
pallet-timestamp 	= { workspace = true, default-features = false }
pallet-transaction-payment 	= { workspace = true, default-features = false }
pallet-insecure-randomness-collective-flip = { workspace = true, default-features = false }
# codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
# 	"derive",
# ] }
# scale-info 				= { version = "2.10.0", default-features = false, features = ["derive"] }
# serde					 = { version = "1.0.197", features = ["derive"], optional = true }
# frame-benchmarking 		= {  default-features = false, optional = true, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.6.0" }
# frame-support 				= {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.6.0" }
# frame-system			 = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.6.0" }
# sp-std 					= { default-features = false,  git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.6.0" }

# pallet-nfts 				= {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.6.0" }
# pallet-balances 			= {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.6.0" }
# pallet-timestamp 			= {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.6.0" }
# pallet-transaction-payment = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.6.0" }
# pallet-insecure-randomness-collective-flip = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.6.0" }
enumflags2 = { version = "0.7.7" }

# Local dependencies
pallet-xcavate-whitelist = { path = "../xcavate-whitelist", default-features = false }

[dev-dependencies]
sp-core 	= { workspace = true }
sp-io 		= { workspace = true }
# sp-core 		= {  git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.6.0" }
# sp-io 			= {  git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.6.0" }
# sp-runtime 		= {  git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.6.0" }

[features]
default = ["std"]
std = [
	# "codec/std",
	"parity-scale-codec/std",
	"frame-benchmarking?/std",

	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
  	"sp-std/std",
  	"sp-core/std",
  	"sp-io/std",
	
	"scale-info/std",
	"serde",
	"pallet-nfts/std",
	"pallet-balances/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment/std",
	"pallet-insecure-randomness-collective-flip/std",
	"pallet-xcavate-whitelist/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]