[package]
authors     = ["Xcavate Network"]
description = "The Xcavate pallet property governance"
edition     = "2021"
homepage    = "https://xcavate.io"
license     = "Apache-2.0"
name        = "pallet-property-governance"
publish     = false
repository  = "https://github.com/XcavateBlockchain/MarketplaceMVP_Substrate/"
version     = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true }
scale-info         = { workspace = true }

serde = { workspace = true}

frame-benchmarking = { workspace = true, optional = true}
frame-support      = { workspace = true }
frame-system       = { workspace = true }
sp-std             = { workspace = true }

pallet-assets                = { workspace = true }
pallet-balances              = { workspace = true }
pallet-nft-fractionalization = { workspace = true }
pallet-nfts                  = { workspace = true }

# Local dependencies
pallet-nft-marketplace     = { path = "../nft-marketplace", default-features = false }
pallet-property-management = { path = "../property-management", default-features = false }
pallet-xcavate-whitelist   = { path = "../xcavate-whitelist", default-features = false }
sp-io      = { workspace = true }

[dev-dependencies]
sp-core    = { workspace = true }
sp-runtime = { workspace = true }

[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
std = [
	"frame-benchmarking?/std",
	"parity-scale-codec/std",

	"frame-support/std",
	"frame-system/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",

	"pallet-assets/std",
	"pallet-balances/std",
	"pallet-nft-fractionalization/std",
	"pallet-nft-marketplace/std",
	"pallet-nfts/std",
	"pallet-property-management/std",
	"pallet-xcavate-whitelist/std",
	"scale-info/std",
	"serde/std",
]
try-runtime = ["frame-support/try-runtime"]
