[package]
name = "pallet-xcavate-whitelist"
version = { workspace = true }
description = "The Xcavate pallet whitelist"
authors = ["Xcavate Network"]
homepage = "https://xcavate.io"
edition = "2021"
license = "Apache-2.0"
publish = false
repository    = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true, features = ["derive"] }
scale-info 		= { workspace = true, features = ["derive"] }

#frame-benchmarking = { workspace = true, default-features = false, optional = true }	

frame-support 		= { workspace = true }
frame-system		= { workspace = true }
sp-runtime  = { workspace = true }
#sp-core 	= { workspace = true }

# codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
# 	"derive",
# ] }
# scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
# frame-benchmarking = {  default-features = false, optional = true, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.6.0" }
# frame-support = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.6.0" }
# frame-system = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.6.0" }

#[dev-dependencies]
#sp-io 		= { workspace = true }
# sp-core = {  git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.6.0" }
# sp-io = {  git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.6.0" }
# sp-runtime = {  git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.6.0" }

[features]
runtime-benchmarks = [
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
]

default = ["std"]
std = [
#	"codec/std",
	"parity-scale-codec/std",
#	"frame-benchmarking?/std",

	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
#  	"sp-core/std",
#  	"sp-io/std",

	"scale-info/std",
]
#runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
