[package]
authors       = { workspace = true }
description   = "Parachain runtime template for the KILT Decentralized Identity Provider (DIP) consumer."
documentation = { workspace = true }
edition       = { workspace = true }
homepage      = { workspace = true }
license-file  = { workspace = true }
name          = "dip-consumer-runtime-template"
readme        = { workspace = true }
repository    = { workspace = true }
version       = { workspace = true }

[build-dependencies]
substrate-wasm-builder = { workspace = true }

# [dev-dependencies]
# sp-io = { workspace = true, features = ["std"] }

[dependencies]
parity-scale-codec = { workspace = true, features = ["derive"] }
scale-info         = { workspace = true, features = ["derive"] }

# DIP
did                           = { workspace = true }
dip-provider-runtime-template = { workspace = true }
kilt-dip-primitives           = { workspace = true }
pallet-dip-consumer           = { workspace = true }
pallet-postit                 = { workspace = true }
pallet-relay-store            = { workspace = true }

# Substrate
frame-executive                            = { workspace = true }
frame-support                              = { workspace = true }
frame-system                               = { workspace = true }
frame-system-rpc-runtime-api               = { workspace = true }
pallet-aura                                = { workspace = true }
pallet-authorship                          = { workspace = true }
pallet-balances                            = { workspace = true }
pallet-session                             = { workspace = true }
pallet-sudo                                = { workspace = true }
pallet-timestamp                           = { workspace = true }
pallet-transaction-payment                 = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }
pallet-utility                             = { workspace = true }
sp-api                                     = { workspace = true }
sp-block-builder                           = { workspace = true }
sp-consensus-aura                          = { workspace = true }
sp-consensus-babe                          = { workspace = true }
sp-core                                    = { workspace = true }
sp-inherents                               = { workspace = true }
sp-offchain                                = { workspace = true }
sp-runtime                                 = { workspace = true }
sp-session                                 = { workspace = true }
sp-std                                     = { workspace = true }
sp-transaction-pool                        = { workspace = true }
sp-version                                 = { workspace = true }
sp-weights                                 = { workspace = true }
# Xcavate
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-crates-io-v1.1.0", default-features = false }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-crates-io-v1.1.0", default-features = false }
sp-staking = { workspace = true }
pallet-im-online = { workspace = true }
pallet-grandpa = { workspace = true }
frame-election-provider-support = { workspace = true }
pallet-election-provider-multi-phase = { workspace = true }
pallet-nfts                                = { workspace = true }
pallet-uniques                             = { workspace = true }
pallet-nfts-runtime-api                    = { workspace = true }
node-primitives                            = { workspace = true }
pallet-assets                             = { workspace = true }
pallet-asset-tx-payment                             = { workspace = true }
pallet-multisig                             = { workspace = true }
pallet-staking                             = { workspace = true }
pallet-treasury                             = { workspace = true }
pallet-collective                             = { workspace = true }
pallet-bounties                             = { workspace = true }
pallet-child-bounties                             = { workspace = true }
pallet-nft-fractionalization = { workspace = true }
pallet-preimage = { workspace = true }
pallet-scheduler = { workspace = true }
pallet-democracy = { workspace = true }
pallet-offences = { workspace = true }
pallet-nomination-pools = { workspace = true }
pallet-bags-list = { workspace = true }
pallet-babe = { workspace = true }
pallet-insecure-randomness-collective-flip = { workspace = true }
pallet-authority-discovery = { workspace = true }
pallet-staking-reward-curve = { workspace = true }

# Xcavate local
pallet-xcavate-whitelist = { workspace = true }
pallet-community-loan-pool = { workspace = true }
pallet-xcavate-staking = { workspace = true }
pallet-nft-marketplace = { workspace = true }
pallet-community-projects = { workspace = true }
pallet-property-management = { workspace = true }
pallet-property-governance = { workspace = true }
pallet-dummy                 = { workspace = true }

# Cumulus
cumulus-pallet-aura-ext         = { workspace = true }
cumulus-pallet-parachain-system = { workspace = true, features = ["parameterized-consensus-hook"] }
cumulus-primitives-aura         = { workspace = true }
cumulus-primitives-core         = { workspace = true }
cumulus-primitives-timestamp    = { workspace = true }
pallet-collator-selection       = { workspace = true }
parachain-info                  = { workspace = true }

# Polkadot
rococo-runtime = { workspace = true }

# Benchmarks
frame-benchmarking        = { workspace = true, optional = true }
frame-system-benchmarking = { workspace = true, optional = true }
hex-literal               = { workspace = true, optional = true }
kilt-support              = { workspace = true, optional = true }

[features]
default = ["std"]
std = [
  "cumulus-pallet-aura-ext/std",
  "cumulus-pallet-parachain-system/std",
  "cumulus-primitives-core/std",
  "cumulus-primitives-timestamp/std",
  "did/std",
  "dip-provider-runtime-template/std",
  "frame-benchmarking?/std",
  "frame-executive/std",
  "frame-support/std",
  "frame-system-benchmarking?/std",
  "frame-system-rpc-runtime-api/std",
  "frame-system/std",
  "kilt-dip-primitives/std",
  "kilt-support?/std",
  "pallet-aura/std",
  "pallet-authorship/std",
  "pallet-balances/std",
  "pallet-collator-selection/std",
  "pallet-dip-consumer/std",
  "pallet-postit/std",
  "pallet-relay-store/std",
  "pallet-session/std",
  "pallet-sudo/std",
  "pallet-timestamp/std",
  "pallet-transaction-payment-rpc-runtime-api/std",
  "pallet-transaction-payment/std",
  "pallet-utility/std",
  "parachain-info/std",
  "parity-scale-codec/std",
  "rococo-runtime/std",
  "scale-info/std",
  "sp-api/std",
  "sp-block-builder/std",
  "sp-consensus-aura/std",
  "sp-consensus-babe/std",
  "sp-core/std",
  "sp-inherents/std",
  "sp-offchain/std",
  "sp-runtime/std",
  "sp-session/std",
  "sp-std/std",
  "sp-transaction-pool/std",
  "sp-version/std",
  "sp-weights/std",

  "sp-io/std",
  "polkadot-primitives/std",
  "sp-staking/std",
  "pallet-im-online/std",
  "pallet-grandpa/std",
  "pallet-election-provider-multi-phase/std",
  "pallet-nfts/std",        
  "pallet-uniques/std",          
  "pallet-nfts-runtime-api/std", 
  "node-primitives/std",         
  "pallet-assets/std",           
  "pallet-asset-tx-payment/std", 
  "pallet-multisig/std",         
  "pallet-staking/std",          
  "pallet-treasury/std",         
  "pallet-collective/std",      
  "pallet-bounties/std",         
  "pallet-child-bounties/std",
  "pallet-nft-fractionalization/std",
  "pallet-preimage/std",
  "pallet-scheduler/std",
  "pallet-democracy/std",
  "pallet-offences/std",
  "pallet-nomination-pools/std",
  "pallet-bags-list/std",
  "pallet-babe/std",
  "pallet-insecure-randomness-collective-flip/std",
  "pallet-authority-discovery/std",

  "pallet-dummy/std",
  "pallet-xcavate-whitelist/std",
  "pallet-xcavate-staking/std",
  "pallet-nft-marketplace/std",
  "pallet-community-projects/std",
  "pallet-property-management/std",
  "pallet-property-governance/std",
]

runtime-benchmarks = [
  "did/runtime-benchmarks",
  "dip-provider-runtime-template/runtime-benchmarks",
  "frame-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system-benchmarking/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "hex-literal",
  "kilt-dip-primitives/runtime-benchmarks",
  "kilt-support/runtime-benchmarks",
  "pallet-balances/runtime-benchmarks",
  "pallet-collator-selection/runtime-benchmarks",
  "pallet-dip-consumer/runtime-benchmarks",
  "pallet-relay-store/runtime-benchmarks",
  "pallet-sudo/runtime-benchmarks",
  "pallet-timestamp/runtime-benchmarks",
  "pallet-utility/runtime-benchmarks",
  "rococo-runtime/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
]
